--- a/home.html
+++ b/home.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Martine Zorg</title>
+    <link rel="stylesheet" href="CSS/home.css">
 </head>
 <body>
+
+<nav>
+    <img scr="" alt="logo">
+    <p>Martinez Zorg</p>
+    <div>
+        <a href="">Zorg aanbod</a>
+        <a href="">Reserveer</a>
+        <a href="">Contact</a>
+    </div>
+</nav>
+
+<header>
+    <img scr="" alt="random lady">
+    <button></button>
+</header>
+
+<main>
+    <h2>Over mij</h2>
+    <p>Er komt nog een beschrijving</p>
+</main>
+
+<footer>
+    <p>@MartinezZorg</p>
+</footer>
 
 </body>
 </html>
