--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <body>
 
 <nav>
-    <img scr="" alt="logo">
+    <img scr="./images/logo.jpeg" alt="logo">
     <p>Martinez Zorg</p>
     <div>
         <a href="">Zorg aanbod</a>
